реализовал добавление задач на страницу

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 class="todo_title">ToDo List</h1>
     <div class="create_new_todo">
       <input type="text" class="todo_text" placeholder="новая задача">
-      <button class="todo_add">Добавить</button>
+      <button class="todo_btn">Добавить</button>
     </div>
     
     <div class="wrapper">
