- разделил текущие и выполненные таски/задачи на два объекта, изменена логика их размещения на странице - дописаны и исправлены стили

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
   <div class="todo_list">
     <h1 class="todo_title">ToDo List</h1>
     <div class="create_new_todo">
-      <input type="text" class="todo_text" placeholder="новая задача">
+      <label>
+        <input type="text" class="todo_text" placeholder="новая задача">
+      </label>
       <button class="todo_btn">Добавить</button>
     </div>
     
     <div class="wrapper">
       <ul class="todo"></ul>
+      <ul class="completed"></ul>
     </div>
   </div>
 </div>
