- добавил возможность переключать вкладки активных и выполненных задач

--- a/index.html
+++ b/index.html
@@ -23,8 +23,17 @@
     </div>
     
     <div class="wrapper">
-      <ul class="todo"></ul>
-      <ul class="completed"></ul>
+      <ul class="todo todo_active "></ul>
+      <ul class="completed completed_active completed_active_border"></ul>
+    </div>
+    <div class="footer">
+      <div class="todo_controls">
+        <ul class="controls_list">
+          <li class="controls_item controls_item_active" data-ctrl="ctrl_1">Все задачи</li>
+          <li class="controls_item" data-ctrl="ctrl_2">Активные</li>
+          <li class="controls_item" data-ctrl="ctrl_3">Выполненные</li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
