--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css?new">
-  <link rel="shortcut icon" href="/img/logo.png" type="image/png">
+  <meta http-equiv="X-UA-Compatible"
+        content="ie=edge">
+  <link rel="stylesheet"
+        href="style.css?new">
+  <link rel="shortcut icon"
+        href="/img/logo.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
   <title>TODO List</title>
 </head>
 <body>
@@ -19,9 +24,13 @@
       <h1 class="todo_title">ToDo List</h1>
       <div class="create_new_todo">
         <label>
-          <input type="text" class="todo_text" placeholder="новая задача">
+          <input type="text" class="todo_text" placeholder="Enter new task">
         </label>
-        <button class="todo_btn">Добавить</button>
+        <button class="todo_btn">
+          <span class="material-icons">
+            add
+          </span>
+        </button>
       </div>
     </div>
     
@@ -32,9 +41,9 @@
     
     <div class="todo_footer">
       <ul class="controls_list">
-        <li class="controls_item controls_item_active" data-ctrl="ctrl_1">Все задачи</li>
-        <li class="controls_item" data-ctrl="ctrl_2">Активные</li>
-        <li class="controls_item" data-ctrl="ctrl_3">Выполненные</li>
+        <li class="controls_item controls_item_active" data-ctrl="ctrl_1"></li>
+        <li class="controls_item" data-ctrl="ctrl_2"></li>
+        <li class="controls_item" data-ctrl="ctrl_3"></li>
       </ul>
     </div>
   </div>
