--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     <h4>Are you sure you want to delete the task?</h4>
     <div class="confirm_buttons">
       <button class="confirm_btn">
-        <span class="material-icons" data-confirm="true">check_circle_outline</span>
+        <span class="material-icons">check_circle_outline</span>
       </button>
       <button class="confirm_btn">
-        <span class="material-icons" data-confirm="false">highlight_off</span>
+        <span class="material-icons" onclick="closeModal()">highlight_off</span>
       </button>
     </div>
   </div>
