- тест, редактирование заметок

--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
     </div>
   </div>
   
+  <div class="overlay"></div>
+  <div class="edit_modal">
+    <h4>Edit task?</h4>
+    <form class="edit_form">
+      <label for="edit">
+        <textarea name="edit" id="edit" rows="3">тут текст заметки</textarea>
+      </label>
+    </form>
+    <div class="confirm_buttons">
+      <button class="edit_btn">
+        <span class="material-icons">check_circle_outline</span>
+      </button>
+      <button class="edit_btn">
+        <span class="material-icons" onclick="closeModal()">highlight_off</span>
+      </button>
+    </div>
+    
+  </div>
+  
   <div class="todo_footer">
   
   </div>
