- стилизовал чекбоксы - изменил шрифт

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         href="https://fonts.googleapis.com">
   <link rel="preconnect"
         href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <title>TODO List</title>
@@ -83,7 +83,6 @@
     </div>
   </div>
   
-  <div class="overlay"></div>
   <div class="edit_modal">
     <h4>Edit task?</h4>
     <form class="edit_form">
