- добавил лого - фикс стилей

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         href="https://fonts.googleapis.com">
   <link rel="preconnect"
         href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <title>TODO List</title>
@@ -45,7 +45,8 @@
 <div class="todo_list">
   <div class="todo_header">
     <div class="header_inner">
-      <h1 class="todo_title">ToDo List</h1>
+      <img class="header_logo" src="img/logo2.png" alt="logo">
+<!--      <h1 class="todo_title">ToDo List</h1>-->
       <ul class="controls_list">
         <li class="controls_item controls_item_active" data-ctrl="ctrl_1"></li>
         <li class="controls_item" data-ctrl="ctrl_2"></li>
