--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
   </div>
   
   <div class="edit_modal">
-    <h4>Edit task?</h4>
+    <h4>Edit the task text</h4>
     <form class="edit_form">
       <label for="edit">
-        <textarea name="edit" id="edit" rows="3">тут текст заметки</textarea>
+        <textarea name="edit" id="edit" rows="5">тут текст заметки</textarea>
       </label>
     </form>
     <div class="confirm_buttons">
