--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
   <div class="todo_header">
     <div class="header_inner">
       <img class="header_logo" src="img/logo2.png" alt="logo">
-<!--      <h1 class="todo_title">ToDo List</h1>-->
       <ul class="controls_list">
         <li class="controls_item controls_item_active" data-ctrl="ctrl_1"></li>
         <li class="controls_item" data-ctrl="ctrl_2"></li>
@@ -85,7 +84,7 @@
   </div>
   
   <div class="edit_modal">
-    <h4>Edit the task text</h4>
+    <h4>Edit the task</h4>
     <form class="edit_form">
       <label for="edit">
         <textarea name="edit" id="edit" rows="5">тут текст заметки</textarea>
@@ -99,7 +98,7 @@
         <span class="material-icons" onclick="closeModal()">highlight_off</span>
       </button>
     </div>
-    
+  
   </div>
   
   <div class="todo_footer">
